must-gather.local.7541592903822836477/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-ccdc0abcf68b276b781a774d7630503a6b323c7cedea8e5636b09dd759dd226a/cluster-scoped-resources/config.openshift.io/ingresses.yaml
---
apiVersion: config.openshift.io/v1
items:
- apiVersion: config.openshift.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2024-06-11T10:39:57Z"
    generation: 1
    managedFields:
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:componentRoutes:
            k:{"name":"oauth-openshift","namespace":"openshift-authentication"}:
              .: {}
              f:conditions:
                k:{"type":"Degraded"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
                k:{"type":"Progressing"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
              f:consumingUsers: {}
              f:currentHostnames: {}
              f:defaultHostname: {}
              f:name: {}
              f:namespace: {}
              f:relatedObjects: {}
      manager: AuthenticationCustomRouteController
      operation: Apply
      subresource: status
      time: "2024-06-11T11:08:38Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          .: {}
          f:domain: {}
          f:loadBalancer:
            .: {}
            f:platform:
              .: {}
              f:type: {}
      manager: cluster-bootstrap
      operation: Update
      time: "2024-06-11T10:39:57Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          .: {}
          f:defaultPlacement: {}
      manager: cluster-bootstrap
      operation: Update
      subresource: status
      time: "2024-06-11T10:39:57Z"
    name: cluster
    resourceVersion: "29463"
    uid: 0f1fab31-5566-42d7-840b-c91484ad6c09
  spec:
    domain: apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    loadBalancer:
      platform:
        type: ""
  status:
    componentRoutes:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:08:38Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Progressing
      - lastTransitionTime: "2024-06-11T11:07:09Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Degraded
      consumingUsers:
      - system:serviceaccount:oauth-openshift:authentication-operator
      currentHostnames:
      - oauth-openshift.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      defaultHostname: oauth-openshift.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      name: oauth-openshift
      namespace: openshift-authentication
      relatedObjects:
      - group: route.openshift.io
        name: oauth-openshift
        namespace: openshift-authentication
        resource: routes
    defaultPlacement: Workers
kind: IngressList
metadata:
  continue: ""
  resourceVersion: "39770"
